# ocr_doc

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml
ocr/: ocr_module.py  permitted_chars.txt
tests/: post.py
tests/results/: hw_1.json  structure_1.json  structure_2.json  structure_3.json
